k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-platform
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dev.frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-frontend
                port:
                  number: 80
    - host: dev.backend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-backend
                port:
                  number: 80
